# tfg-unai

./: .gitignore  .gitmodules  README.md
3D_models/: direction_mechanism.FCStd  sign.blend
3D_models/original_pibot_meshes/: assets_urls.txt
memoria-tfg/: README.md  bibliografia.bib  estilo.tex  memoria.bcf  memoria.run.xml  memoria.tex
memoria-tfg/capitulos/: capitulo1.tex  capitulo1.tex.bak  capitulo2.tex  capitulo2.tex.bak  capitulo3.tex  capitulo3.tex.bak  capitulo4.tex  capitulo4.tex.bak  capitulo5.tex  capitulo5.tex.bak  capitulo6.tex  capitulo6.tex.bak
memoria-tfg/portada/: abstract.tex  acronimos.tex  agradecimientos.tex  indice.tex  licencia.tex  portada.tex  resumen.tex  resumen.tex.bak
plantilla-latex-presentacion-master/: licencia.tex  slides.pdfpc  slides.tex
ros2_ws/src/nav2_bringup_multirobot/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/nav2_bringup_multirobot/launch/: bringup_launch.py  localization_launch.py  multi_tb3_simulation_launch.py  (+4 more)
ros2_ws/src/pibot_robot/: CMakeLists.txt  package.xml
ros2_ws/src/pibot_sim/: CMakeLists.txt  package.xml
ros2_ws/src/pibot_sim/launch/: world.launch.py  world2.launch.py
ros2_ws/src/pibot_sim/src/: node_test.cpp
tests/rpi_arduino_comms/: i2c_ard_pi.py  i2c_ard_pi_2.py  serial_ard_pi.py
tests/rpi_arduino_comms/i2c_test/: i2c_test.ino
tests/rpi_arduino_comms/i2c_test_2/: i2c_test_2.ino
tests/serial/: serial_ard_pi.py
tests/servo/: pigpio_get_PWM_dutycicle.py  servo_callback_event_test.py  servo_callback_event_test2.py  servo_callback_event_test3  servo_callback_event_test3.c  servo_gpio_pwm_test.py
waffle_fixes/: nav2_multirobot_params_1.yaml  nav2_multirobot_params_2.yaml
zenoh_nodes/: config_network.sh  sim_init_zenoh.sh  zenoh_config.json  zenoh_laptop_config.json  zenoh_laptop_config_lab_asus.json  zenoh_laptop_config_lab_ir.json  zenoh_laptop_test_config.json  zenoh_rpi_config.json  zenoh_rpi_config_lab_asus.json  zenoh_rpi_config_lab_ir.json
zenoh_nodes/swarm_obj_finder/: data_flow.yaml  real-data-flow.yaml  sim-data-flow.yaml  terminator_layout_cfg  testing_data_flow.yaml
zenoh_nodes/swarm_obj_finder/nodes/: comms_utils.py  geom_utils.py  map_utils.py  marker_utils.py  message_utils.py  navigator_op.py  obj_detector_op.py  obj_pos_infer_op.py  paths_planner_op.py  real_obj_detector_op.py
zenoh_nodes/zenoh_flow_tests/: data-flow.yaml  img_arc_detection.py  img_hsv_filter.py  lidar-tests.yaml
(+56 files in other folders)
